--- a/index.html
+++ b/index.html
@@ -7,32 +7,87 @@
  -->    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <nav role="navigation">Nav</nav>
+    <nav role="navigation">
+        <a class="logOut">Log out</a>
+    </nav>
     <main role="main">
         <header role="banner">
-            <h1>Hero</h1>
+            <h1 class="addBeerTitle">Add a beer to your list:</h1>
         </header>
 
-        <section>
-            Section 1
+        <section class="addBeerSection">
+
+            <form id="beerSearchForm">
+                <div class="nameSearch">
+                    <label for="beerSearch">Name of beer:</label>
+                    <input type="text" class="beerName"/>
+                </div>
+                
+                <div class="brewerySearch">
+                    <label for="beerSearchBrewery">Brewery:</label>
+                    <input type="text" class="breweryName"/>
+                </div>
+                <button class="submitBeerForm" type="submit" for="beerSearchForm">Search!</button>
+            </form>
+
+            <br />
+
+            <div class="resultsList">
+
+                <h3 class="beerItem">Beer 1</h3>
+                <p>Brewery:</p>
+                <p>ABV:</p>
+                <p>Style:</p>
+                <p>Rating:</p>
+
+                <h3 class="beerItem">Beer 2</h3>
+                <p>Brewery:</p>
+                <p>ABV:</p>
+                <p>Style:</p>
+                <p>Rating:</p>
+
+                <h3 class="beerItem">Beer 3</h3>
+                <p>Brewery:</p>
+                <p>ABV:</p>
+                <p>Style:</p>
+                <p>Rating:</p>
+
+                <h3 class="beerItem">Beer 4</h3>
+                <p>Brewery:</p>
+                <p>ABV:</p>
+                <p>Style:</p>
+                <p>Rating:</p>
+
+                <h3 class="beerItem">Beer 5</h3>
+                <p>Brewery:</p>
+                <p>ABV:</p>
+                <p>Style:</p>
+                <p>Rating:</p>
+
+                <h3 class="beerItem">Beer 6</h3>
+                <p>Brewery:</p>
+                <p>ABV:</p>
+                <p>Style:</p>
+                <p>Rating:</p>
+
+                <h3 class="beerItem">Beer 7</h3>
+                <p>Brewery:</p>
+                <p>ABV:</p>
+                <p>Style:</p>
+                <p>Rating:</p>
+
+                <h3 class="beerItem">Beer 8</h3>
+                <p>Brewery:</p>
+                <p>ABV:</p>
+                <p>Style:</p>
+                <p>Rating:</p>
+            </div>
+
         </section>
 
-        <section>
-            Section 2
-        </section>
-
-        <section>
-            Section 3
-        </section>
-
-        <section>
-            Project 3
-        </section>
-        
-        <section>
-            Section 4
-        </section>
     </main>
-    <footer role="content-info">Footer</footer>
+    <footer role="content-info">
+        <a>Return to top</a>
+    </footer>
 </body>
 </html>
