add add to tried button

--- a/index.html
+++ b/index.html
@@ -39,48 +39,56 @@
                 <p>ABV:</p>
                 <p>Style:</p>
                 <p>Rating:</p>
+                <button class="addBeer">Add to "Tried"</button>
 
                 <h3 class="beerItem">Beer 2</h3>
                 <p>Brewery:</p>
                 <p>ABV:</p>
                 <p>Style:</p>
                 <p>Rating:</p>
+                <button class="addBeer">Add to "Tried"</button>
 
                 <h3 class="beerItem">Beer 3</h3>
                 <p>Brewery:</p>
                 <p>ABV:</p>
                 <p>Style:</p>
                 <p>Rating:</p>
+                <button class="addBeer">Add to "Tried"</button>
 
                 <h3 class="beerItem">Beer 4</h3>
                 <p>Brewery:</p>
                 <p>ABV:</p>
                 <p>Style:</p>
                 <p>Rating:</p>
+                <button class="addBeer">Add to "Tried"</button>
 
                 <h3 class="beerItem">Beer 5</h3>
                 <p>Brewery:</p>
                 <p>ABV:</p>
                 <p>Style:</p>
                 <p>Rating:</p>
+                <button class="addBeer">Add to "Tried"</button>
 
                 <h3 class="beerItem">Beer 6</h3>
                 <p>Brewery:</p>
                 <p>ABV:</p>
                 <p>Style:</p>
                 <p>Rating:</p>
+                <button class="addBeer">Add to "Tried"</button>
 
                 <h3 class="beerItem">Beer 7</h3>
                 <p>Brewery:</p>
                 <p>ABV:</p>
                 <p>Style:</p>
                 <p>Rating:</p>
+                <button class="addBeer">Add to "Tried"</button>
 
                 <h3 class="beerItem">Beer 8</h3>
                 <p>Brewery:</p>
                 <p>ABV:</p>
                 <p>Style:</p>
                 <p>Rating:</p>
+                <button class="addBeer">Add to "Tried"</button>
             </div>
 
         </section>
